tdf#91378-Empty Custom Properties are lost while saving in .pptx format

Conflicts:
	sd/qa/unit/export-tests.cxx
Reviewed on:
	https://gerrit.libreoffice.org/15966

Change-Id: Ibc24ab9633b51fe41ad483121646cc391319fe6f